src/main/java/com/example/sidepot/global/error/BaseErrorCode.java
package com.example.sidepot.global.error;

public interface BaseErrorCode {
    int httpValue();
    String getErrorMessage();
}
